Closed Bug 1032431 Opened 11 years ago Closed 11 years ago

[OMTC]CSS 3D transform wrongly clipped if HWA=off

Categories

(Core :: Graphics: Layers, defect)

33 Branch
x86_64
Windows 7
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla33

People

(Reporter: alice0775, Assigned: mattwoodrow)

References

Details

Attachments

(5 files)

Steps To Reproduce: 1. Disable HWA and restart 2. Open http://desandro.github.io/3dtransforms/examples/card-01.html 3. Click "Flip Card" button Actual Results: Vertical line of "1" disappears while animating This problem does not happen if HWA=on. Regression window(m-i) Good: https://hg.mozilla.org/integration/mozilla-inbound/rev/bb8fc1380b00 Mozilla/5.0 (Windows NT 6.1; WOW64; rv:32.0) Gecko/20100101 Firefox/32.0 ID:20140519202628 Bad: https://hg.mozilla.org/integration/mozilla-inbound/rev/46d9ffb97fe3 Mozilla/5.0 (Windows NT 6.1; WOW64; rv:32.0) Gecko/20100101 Firefox/32.0 ID:20140519224628 Pushlog: http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=bb8fc1380b00&tochange=46d9ffb97fe3 Triggered by: 46d9ffb97fe3 Bas Schouten — Bug 899785: Switch on OMTC and async video on windows. r=BenWa
Attached image screenshot
Attached file non animation html
matt I think this is the same bug we looked at
Attached file "O"
"O" clipped right side and bottom. It is clipped from the bottom when I reduce height of browser.
Attached image screenshot
Matt, could you take a look at this?
Assignee: nobody → matt.woodrow
Status: NEW → ASSIGNED
Bit fiddly, but this matches BasicLayers fairly closely.
Attachment #8453514 - Flags: review?(bas)
Comment on attachment 8453514 [details] [diff] [review] Handle device offsets correctly Review of attachment 8453514 [details] [diff] [review]: ----------------------------------------------------------------- Fiddly indeed, but it looks alright to me.
Attachment #8453514 - Flags: review?(bas) → review+
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla33
QA Whiteboard: [good first verify]
I was able to reproduce this bug on Nightly 33.0a1 (2014-06-30), using Windows 7 x64. Verified fixed on Windows 7 x64 using Nightly 35.0a1 (2014-10-09). This fix can be marked as verified. I also noticed a strange behavior: the card shakes when is turned on the opposite side. Is this effect expected? [bugday-20141008]
Status: RESOLVED → VERIFIED
QA Whiteboard: [good first verify] → [good first verify][bugday-20141008]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: