Bug 1032431 - Handle device offsets correctly when 3d transforming in BasicCompositor. r=Bas