gfx/layers/basic/BasicCompositor.cpp
@@ -190,7 +190,7 @@ static void
 PixmanTransform(DataSourceSurface* aDest,
                 DataSourceSurface* aSource,
                 const gfx3DMatrix& aTransform,
-                gfxPoint aDestOffset)
+                const Point& aDestOffset)
 {
   IntSize destSize = aDest->GetSize();
   pixman_image_t* dest = pixman_image_create_bits(PIXMAN_a8r8g8b8,
@@ -273,6 +273,10 @@ BasicCompositor::DrawQuad(const gfx::Rect& aRect,
       return;
     }
 
+    Matrix destTransform;
+    destTransform.Translate(-aRect.x, -aRect.y);
+    dest->SetTransform(destTransform);
+
     // Get the bounds post-transform.
     To3DMatrix(aTransform, new3DTransform);
     gfxRect bounds = new3DTransform.TransformBounds(ThebesRect(aRect));
@@ -286,9 +290,7 @@ BasicCompositor::DrawQuad(const gfx::Rect& aRect,
 
     // When we apply the 3D transformation, we do it against a temporary
     // surface, so undo the coordinate offset.
-    new3DTransform = new3DTransform * gfx3DMatrix::Translation(-transformBounds.x, -transformBounds.y, 0);
-
-    transformBounds.MoveTo(0, 0);
+    new3DTransform = gfx3DMatrix::Translation(aRect.x, aRect.y, 0) * new3DTransform;
   }
 
   newTransform.PostTranslate(-offset.x, -offset.y);
@@ -379,8 +381,9 @@ BasicCompositor::DrawQuad(const gfx::Rect& aRect,
       return;
     }
 
-    PixmanTransform(temp, source, new3DTransform, gfxPoint(0, 0));
+    PixmanTransform(temp, source, new3DTransform, transformBounds.TopLeft());
 
+    transformBounds.MoveTo(0, 0);
     buffer->DrawSurface(temp, transformBounds, transformBounds);
   }
 
